# test

./: .gitignore  allow-zerotier.bat  delete-partition.ps1  disable-firewall-test.bat  docker-compose.yml  fix-firewall-admin.bat  open-firewall-ports.ps1  start_all.ps1  start_async.ps1  start_backend.ps1  start_frontend.ps1  start_infra.ps1  test-add-partition.ps1  update-partition.ps1
Desktop/web_lab1/dehydrotationlab7/: .env  index.html  manifest.webmanifest  sw.js  swagger.go
asyncservice_rust/: .gitignore  Cargo.toml  Dockerfile
asyncservice_rust/src/: calculation.rs  handlers.rs  main.rs  models.rs  server.rs
backend/: .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  run_migrate.ps1  run_seed.ps1  run_server.ps1  test-api.ps1
backend/.github/workflows/: deploy-pages.yml
backend/cmd/main/: main.go
backend/cmd/migrate/: main.go
backend/cmd/seed/: main.go
backend/config/: config.prod.toml  config.toml
backend/docs/: swagger.json  swagger.yaml
backend/internal/migrations/: 001_init.sql  002_add_calculations_count.sql
backend/internal/pkg/: app.go
frontend/: .env.example  .env.production.example  .firebaserc  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/icons/: README.txt
frontend/scripts/: kill-vite.ps1  setup-cert.ps1
frontend/src/: main.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src/api/: generated.ts  http.ts
frontend/src/config/: appConfig.ts
insomnia/: partition_soundproofing_collection.json  partitionlab_insomnia_collection.json
(+54 files in other folders)
